# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" = 'plugin.json'
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.1
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" = 'index.ts'
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.2
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" IN ('frontend.tsx')
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.3
  '
  SELECT COUNT(*) AS "__count"
  FROM "posthog_pluginsourcefile"
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.4
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" = 'plugin.json'
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.5
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" = 'index.ts'
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.6
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" IN ('frontend.tsx')
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.7
  '
  SELECT COUNT(*) AS "__count"
  FROM "posthog_pluginsourcefile"
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_explicit_index_js_works
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" = 'plugin.json'
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_explicit_index_js_works.1
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" = 'index.ts'
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_explicit_index_js_works.2
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" IN ('frontend.tsx')
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_explicit_index_js_works.3
  '
  SELECT COUNT(*) AS "__count"
  FROM "posthog_pluginsourcefile"
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_index_ts_works
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" = 'plugin.json'
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_index_ts_works.1
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" = 'index.ts'
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_index_ts_works.2
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" IN ('frontend.tsx')
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_index_ts_works.3
  '
  SELECT COUNT(*) AS "__count"
  FROM "posthog_pluginsourcefile"
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_frontend_tsx_works
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" = 'plugin.json'
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_frontend_tsx_works.1
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" = 'frontend.tsx'
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_frontend_tsx_works.2
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" IN ('index.ts')
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_frontend_tsx_works.3
  '
  SELECT COUNT(*) AS "__count"
  FROM "posthog_pluginsourcefile"
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" = 'plugin.json'
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.1
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" = 'index.ts'
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.2
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" IN ('frontend.tsx')
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.3
  '
  SELECT COUNT(*) AS "__count"
  FROM "posthog_pluginsourcefile"
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.4
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" = 'plugin.json'
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.5
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" = 'frontend.tsx'
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.6
  '
  SELECT "posthog_pluginsourcefile"."id",
         "posthog_pluginsourcefile"."plugin_id",
         "posthog_pluginsourcefile"."filename",
         "posthog_pluginsourcefile"."source",
         "posthog_pluginsourcefile"."status",
         "posthog_pluginsourcefile"."transpiled",
         "posthog_pluginsourcefile"."error"
  FROM "posthog_pluginsourcefile"
  WHERE ("posthog_pluginsourcefile"."filename" IN ('index.ts')
         AND "posthog_pluginsourcefile"."plugin_id" = 2)
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.7
  '
  SELECT COUNT(*) AS "__count"
  FROM "posthog_pluginsourcefile"
  '
---
